# LoveCompass

./: .env.example  .gitignore  CONTRIBUTING.md  RD.md  README.md  TODOs.md  UPDATE.md  pyproject.toml  start.sh
BE-HeartCompass/: alembic.ini  chain.md  index.py  langgraph.json  lark_main.py  main.py  mbti.json  pyproject.toml  request.py  run-dev.sh  run-prod.sh  utils.py
BE-HeartCompass/agent/: README.md  adapter.py  ark.py  embedder.py  embedding.py  fornax.py  hooks.py  index.py  llm.py  prompt.py  react_agent.py  state_graph.py  test-agent.py  test_agent.py  tools.py
BE-HeartCompass/agent/graph/: AnalysisGraph.py  ContextGraph.py  README.md  checkpointer.py  index.py  state.py  utils.py
BE-HeartCompass/database/: README.md  context-schemas.py  database.py  db-migrate.sh  enums.py  models.py  test.py
BE-HeartCompass/server/: authentication.py  faas.py  routers.py
BE-HeartCompass/server/services/: README.md  ai.py  analysis.py  app.py  context.py  context_crud.py  embedding.py  user.py  virtual_figure.py
BE-HeartCompass/server/subRouters/: app.py  context.py  context_crud.py  user.py  virtual_figure.py
BE-HeartCompass/src/agent/: adapter.py  ark.py  embedding.py  llm.py  mem0.py  (+3 more)
BE-HeartCompass/test/: agent.py  ark_llm_call.py  mem0.py
BE-LoveCompass/: README.md  alembic.ini  main.py  mbti.json  pyproject.toml  run-dev.sh  run-prod.sh
BE-LoveCompass/agent/: README.md  adapter.py  index.py  mcp.py  test-agent.py
BE-LoveCompass/database/: db-migrate.sh  enums.py  models.py  test.py
BE-LoveCompass/server/: authentication.py  faas.py  routers.py
(+144 files in other folders)
